--- a/stable/linux-uksm-git/PKGBUILD
+++ b/stable/linux-uksm-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-uksm-git
 _major=5.12
 _srcname=linux
 pkgver=5.12.9.r0.g5a973f190385
-pkgrel=1
+pkgrel=2
 pkgdesc='Linux UKSM'
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -64,12 +64,12 @@ _uksm_path="uksm-patches"
 #_uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master/v5.x"
 #_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
 _uksm_patch="0001-UKSM-for-${_major}.patch"
-_gcc_path="cpu-patches-v3-sep"
-_gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
+_compiler_path="cpu-patches-v3-sep"
+_compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
         "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
-        "${_lucjanpath}/${_gcc_path}/${_gcc_patch}"
+        "${_lucjanpath}/${_compiler_path}/${_compiler_patch}"
         "${_lucjanpath}/arch-patches-v6/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
          # the main kernel config files
         'config')
