--- a/stable/linux-bfq-dev-git/PKGBUILD
+++ b/stable/linux-bfq-dev-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
 _major=5.13
 _srcname=linux
-pkgver=5.13.5.r0.g25423f4bd9a9
-pkgrel=1
+pkgver=5.13.7.r0.gf17352f54186
+pkgrel=2
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -70,7 +70,7 @@ _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 #_bfq_rel="r2K210223"
 #_bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _bfq_path="bfq-lucjan"
-_bfq_rel="r2K210721v1"
+_bfq_rel="r2K210802v1"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_rel}.patch"
 _compiler_path="cpu-patches-sep"
 _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
@@ -333,7 +333,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'fd300e81747f6b8967a48462890cbe6d611967e298c95c4724c5858620c6ed798b7fd14091e2ee6e6308eebfbb01478885038a90f8b825bd32564e9ff0918ea2'
+            '06b261275b585b3459015fd822b0ddfaffc04d1ec0900700dadfabf1599e9aacd39fc4538a0869f017f006fb80c94f5710b7458c27880ad7254ab50ebff47e1e'
             '8f7664cf380e413a2c09d3bd774059dad700de81c43e6e234f72f422c3a9f9f2e853ddcd4b0a71c91a0544f84b4a4534d7c8ef5a428b3fe395af87b6a2a22572'
             'fddbdd4897d79b2b511720400a5024731aa400dd1eb394c31046fad6f9613a8d984daf2d267d95688b1de3ee671d1a3f637866a277a98806bf6b801423d4af01'
             '366454c77d4c1d537bc113b014f6a93026a2ba9b989b59aa689ab6974fd54df46871b7cc2d4c491d1a1547154d6a7cc9f64f8cc53c3e25ba490ad8dcd32584ea')
